syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

message NocCertificatesBySubject {
  string subject = 1; 
  repeated string subjectKeyIds = 2;
  uint32 schemaVersion = 3;
}

